--- a/style.css
+++ b/style.css
@@ -846,7 +846,7 @@ h4 {
 }
 
 .bg-presentation {
-    background-image: url("images/image-de-presentation.bmp");
+    background-image: url("images/image-de-presentation.jpg");
 }
 
 @media (max-width: 1024px) {
