--- a/style.css
+++ b/style.css
@@ -10,7 +10,34 @@ body {
 header {
     background-color: #FFFFFF;
     padding: 20px 50px;
+    /* width: 100%;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center; */
 }
+
+/* .container-header nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 1000px;
+    height: 52px;
+} */
+
+/* .logo img {
+    height: 50px;
+} */
+
+/* .buttons ul {
+    display: flex;
+    list-style: none;
+    font-size: 1.4em;
+} */
+
+/* .buttons li {
+    margin: 0px 10px;
+} */
 
 a,
 button {
@@ -312,7 +339,7 @@ a:hover {
 }
 
 .navbar-brand img {
-    height: 40px;
+    height: 45px;
     max-height: 200px;
     margin: 0 5px 0 0;
     display: inline;
@@ -336,7 +363,7 @@ a:hover {
 .nav > li {
     float: left;
     margin-top: 4px;
-    font-size: 16px;
+    font-size: 1.3em;
 }
 
 .navbar-nav .open .dropdown-menu > li > a {
@@ -688,7 +715,7 @@ a {
 }
 
 p {
-    font-size: 0.9em;
+    font-size: 1.1em;
 }
 
 .tight-width-whitespace {
@@ -700,10 +727,10 @@ p {
     width: 100px;
 }
 
-.h1 {
+/* .h1 {
     font-size: 20px;
     font-family: "Open Sans";
-}
+} */
 
 .citation {
     font-style: italic;
@@ -729,12 +756,12 @@ p {
 }
 
 h2 {
-    font-size: 22px;
+    font-size: 1.6em;
     line-height: 1.4em;
 }
 
 h3 {
-    font-size: 16px;
+    font-size: 1.3em;
     text-transform: uppercase;
     font-weight: 700;
     color: #333333!important;
