--- a/style.css
+++ b/style.css
@@ -7,42 +7,10 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-header {
-    background-color: #FFFFFF;
-    padding: 20px 50px;
-    /* width: 100%;
-    height: 70px;
-    display: flex;
-    justify-content: center;
-    align-items: center; */
-}
-
-/* .container-header nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 1000px;
-    height: 52px;
-} */
-
-/* .logo img {
-    height: 50px;
-} */
-
-/* .buttons ul {
-    display: flex;
-    list-style: none;
-    font-size: 1.4em;
-} */
-
-/* .buttons li {
-    margin: 0px 10px;
-} */
-
 a,
 button {
     transition: all .3s ease-in-out;
-    outline: none;
+    outline: none!important;
 }
 
 a:hover {
@@ -50,14 +18,14 @@ a:hover {
     cursor: pointer;
 }
 
-/* #page-loading-blocs-notifaction {
+#page-loading-blocs-notifaction {
     position: fixed;
     top: 0;
     bottom: 0;
     width: 100%;
     z-index: 100000;
     background: #FFFFFF url("images/pageload-spinner.gif") no-repeat center center;
-} */
+}
 
 .bloc {
     width: 100%;
@@ -70,11 +38,6 @@ a:hover {
     background-size: cover;
     position: relative;
 }
-
-/* .bloc-3-texte {
-    color: #FFFFFF;
-    text-align: center;
-} */
 
 .bloc .container {
     padding-left: 0;
@@ -93,7 +56,7 @@ a:hover {
     padding: 20px 50px;
 }
 
-/* .bg-center,
+.bg-center,
 .bg-l-edge,
 .bg-r-edge,
 .bg-t-edge,
@@ -107,7 +70,7 @@ a:hover {
     -moz-background-size: auto!important;
     -o-background-size: auto!important;
     background-size: auto!important;
-} */
+}
 
 .bg-repeat {
     background: repeat;
@@ -301,13 +264,13 @@ a:hover {
     border-color: rgba(0, 0, 0, .3);
 }
 
-/* .voffset {
+.voffset {
     margin-top: 30px;
-} */
+}
 
-/* .voffset-lg {
+.voffset-lg {
     margin-top: 80px;
-} */
+}
 
 .row-no-gutters {
     margin-right: 0;
@@ -339,7 +302,6 @@ a:hover {
 }
 
 .navbar-brand img {
-    height: 45px;
     max-height: 200px;
     margin: 0 5px 0 0;
     display: inline;
@@ -363,7 +325,7 @@ a:hover {
 .nav > li {
     float: left;
     margin-top: 4px;
-    font-size: 1.3em;
+    font-size: 16px;
 }
 
 .navbar-nav .open .dropdown-menu > li > a {
@@ -525,23 +487,23 @@ button {
     text-shadow: 0 1px 2px rgba(0, 0, 0, .3);
 }
 
-/* .panel-sq,
+.panel-sq,
 .panel-sq .panel-heading,
 .panel-sq .panel-footer {
     border-radius: 0;
-} */
+}
 
-/* .panel-rd {
+.panel-rd {
     border-radius: 30px;
-} */
+}
 
-/* .panel-rd .panel-heading {
+.panel-rd .panel-heading {
     border-radius: 29px 29px 0 0;
-} */
+}
 
-/* .panel-rd .panel-footer {
+.panel-rd .panel-footer {
     border-radius: 0 0 29px 29px;
-} */
+}
 
 .form-control {
     border-color: rgba(0, 0, 0, .1);
@@ -715,7 +677,7 @@ a {
 }
 
 p {
-    font-size: 1.1em;
+    font-size: 11px;
 }
 
 .tight-width-whitespace {
@@ -723,22 +685,9 @@ p {
     margin: auto auto auto auto;
 }
 
-.image-resize-mode {
-    width: 100px;
-}
-
-/* .h1 {
+.h1 {
     font-size: 20px;
     font-family: "Open Sans";
-} */
-
-.citation {
-    font-style: italic;
-    margin-bottom: 0;
-}
-
-.citation_author {
-    font-size: 1.1em;
 }
 
 .cta-hero {
@@ -752,16 +701,16 @@ p {
 
 .social {
     max-width: 400px;
-    margin: auto auto 40px auto;
+    margin: auto auto auto auto;
 }
 
 h2 {
-    font-size: 1.6em;
+    font-size: 22px;
     line-height: 1.4em;
 }
 
 h3 {
-    font-size: 1.3em;
+    font-size: 15px;
     text-transform: uppercase;
     font-weight: 700;
     color: #333333!important;
@@ -813,9 +762,9 @@ h4 {
     text-decoration: underline!important;
 }
 
-/* .bgc-white {
+.bgc-white {
     background-color: #FFFFFF;
-} */
+}
 
 .bgc-dark-slate-blue {
     background-color: #364577;
@@ -826,7 +775,7 @@ h4 {
 }
 
 .tc-white {
-    color: #FFFFFF!important;
+    color: #F3976C!important;
 }
 
 .btn-atomic-tangerine {
