--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3090,6 +3090,7 @@ label {
     display: inline-block;
     max-width: 100%;
     margin-bottom: 5px;
+    font-size: 1.17em;
     font-weight: 700
 }
 
