--- a/style.css
+++ b/style.css
@@ -722,6 +722,19 @@ p {
     font-size: 2.2em;
 }
 
+.coordonees {
+    color: #bc3e07!important;
+}
+
+.e-mail {
+    font-size: 1.17em;
+
+}
+
+.e-mail:hover {
+    color: #df8a65!important;
+}
+
 @media (max-width: 767px) {
     .txt-lg h2 {
         font-size: 1.8em;
