--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color: rgba(25, 22, 21, .6);
 }
 
 .d-bloc .a-btn:hover,
@@ -155,7 +155,7 @@ a:hover {
 .d-bloc h5 a:hover,
 .d-bloc h6 a:hover,
 .d-bloc p a:hover {
-    color: rgba(255, 255, 255, 1);
+    color: rgba(25, 22, 21, 1);
 }
 
 .d-bloc .navbar-toggle .icon-bar {
@@ -785,6 +785,8 @@ p {
     display: flex;
     justify-content: center;
     font-size: 1.15em;
+    font-weight: 400;
+    color: #191615;
 }
 
 .annuaires ul {
@@ -864,6 +866,10 @@ h1 {
 
 .tc-white {
     color: #FFFFFF!important;
+}
+
+.tc-dark {
+    color: #191615!important;
 }
 
 .tc-dark-tangerine {
